Fixed layout on ios devices with small screen

--- a/src/components/styles.sass
+++ b/src/components/styles.sass
@@ -8,5 +8,5 @@
   width: 375px
 
   @media screen and (max-width: 375px)
-    height: 100vh
-    width: 100vw
+    height: 100%
+    width: 100%
