--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,9 +1,9 @@
 @import './reset'
 @import './variables'
 
-body
-  width: 100vw
-  height: 100vh
+html, body
+  width: 100%
+  height: 100%
   padding: 0
   margin: 0
 
